# chat-merge-app

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  COWORK_CODE_HANDOFF.md  Dockerfile  LATEST_PLAN.md  RALPH.md  README.md  REVIEW_NOTES.md  STATUS.md  nixpacks.toml  railway.toml  requirements.txt  start.sh  vercel.json
api/: index.py
backend/: .env.example  ARCHITECTURE.md  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: database.py  models.py  schemas.py
backend/app/providers/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py
backend/app/routes/: api_keys.py  attachments.py  chats.py  merge.py  messages.py
backend/app/services/: chat_service.py  completion_service.py  encryption_service.py  merge_service.py  storage_service.py  vector_service.py
backend/tests/: conftest.py  test_api_chats.py  test_chat_service.py  test_vector_service.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: api.ts  index.css  store.ts  types.ts
frontend/src/components/: App.tsx  ChatArea.tsx  InputArea.tsx  MergeModal.tsx  MessageBubble.tsx  SettingsModal.tsx  Sidebar.tsx
tests/: conftest.py  playwright_full_test.py
