[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.0.0",
    "aiosqlite>=0.19.0",
    "anthropic>=0.30.0",
    "asyncpg>=0.29.0",
    "cryptography>=41.0.0",
    "fastapi>=0.100.0",
    "google-genai>=1.0.0",
    "greenlet>=3.0.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pinecone>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "sse-starlette>=2.0.0",
    "uvicorn[standard]>=0.25.0",
]
